--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -156,6 +156,34 @@ h1{
   width: 100%;
 }
 
+.button-recovery-password{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  display: block;
+  margin: 1rem 0;
+  color: #333;
+  text-decoration: none;
+}
+
+.github{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 0 auto;
+  text-align: center;
+  border: 1px solid #333;
+  width: 300px;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.github a{
+  text-decoration: none;
+  color: #333;
+}
+
+
+.fa-github{
+  font-size: 2rem;
+}
+
 #registerForm input::placeholder{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
