--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -5,6 +5,10 @@
         <label>Password</label>
         <input type="password" name="password" id="">
         <button type="submit">Ingresar</button>
-        <a href="/recoveryPassword">Olvidaste tu contraseña?</a>
+        <a href="/recoveryPassword" class="button-recovery-password">Olvidaste tu contraseña?</a>
     </form>
+    <div class="github">
+        <i class="fa-brands fa-github"></i>
+        <a href="/api/session/github">Ingresar con Github</a>
+    </div>
 </div>
