--- a/src/views/registerForm.handlebars
+++ b/src/views/registerForm.handlebars
@@ -4,7 +4,9 @@
         <input type="text" name="first_name" placeholder="Ingrese nombre" required> 
         <input type="text" name="last_name" placeholder="Ingrese apellido" required> 
         <input type="text" name="email" placeholder="Ingrese email" required> 
+        <input type="date" name="date_of_birth" required />
         <input type="text" name="password" placeholder="Ingrese password" required> 
+        <label>admin<input type="checkbox" name="admin" id="" /></label>
         <button>Enviar</button>
     </form>
 </div>
